--- a/css/index.css
+++ b/css/index.css
@@ -193,3 +193,7 @@ background-repeat: repeat;
     background-color: #e2c794;
     border-color: #815808;
 }
+/**/
+#booksSlideShow{
+  font-family: 'Fredoka One';
+}
