--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,30 @@ footer {
     width: 100%;
     background-image: url(../images/diagmonds.png);
     background-repeat: repeat;
-    color: #fff;
+    color: #eee;
+}
+.footnote{
+    /*background-color: #eee;*/
+/*    background: -webkit-linear-gradient(to bottom right, #390f41, #bc87c6, #390f41); /* For Safari 5.1 to 6.0 */
+/*   background: -o-linear-gradient(to bottom right, #390f41, #bc87c6, #390f41); /* For Opera 11.1 to 12.0 */
+/*    background: -moz-linear-gradient(to bottom right, #390f41, #bc87c6, #390f41); /* For Firefox 3.6 to 15 */
+/*    background: linear-gradient(to bottom right, #337ab7, #061f34, #337ab7);/* Standard syntax (must be last) */
+    box-shadow:  0 6px 20px 0 rgba(0,0,0,.075);
+}
+.footnote img{
+    width:4em;height:4em;display:inline-block!important;
+}
+.footnote article{
+    display:inline-block!important;
+        color: #eee;
+    font-weight: bold;
+}
+.push{
+    padding: 1em;
+}
+#emailIdLink{
+    color: #eee;
+  text-decoration: none;
 }
 .JumbotronPara div {
     margin-top: -2.5%;
@@ -31,12 +54,12 @@ footer {
     body {
         /* Margin bottom by footer height */
         
-        margin-bottom: 80px;
+        margin-bottom: 127px;
     }
     footer {
         /* Set the fixed height of the footer here */
         
-        height: 80px;
+        height: 127px;
     }
     .jumbotron h5 {
         font-weight: bold;
@@ -54,12 +77,12 @@ footer {
     body {
         /* Margin bottom by footer height */
         
-        margin-bottom: 40px;
+        margin-bottom: 96px;
     }
     footer {
         /* Set the fixed height of the footer here */
         
-        height: 40px;
+        height: 96px;
     }
 }
 .skillsHeader {
@@ -67,6 +90,20 @@ footer {
 }
 .skillsHeader {
     color: #fff;
+}
+.SkillsPage .img-thumbnail{
+    transition: transform .2s ease-out;
+  transition: -ms-transform .2s ease-out;
+  -webkit-transition: -webkit-transform .2s ease-out;
+  -moz-transition: -moz-transform .2s ease-out;
+  -o-transition: -o-transform .2s ease-out;
+}
+.SkillsPage .img-thumbnail:hover{
+ transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  -ms-transform: scale(1.2);
 }
 .jumbotron h2 {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -84,16 +121,18 @@ footer {
     background-repeat: repeat;
 }
 .SkillsPage {
-    background-image: url(../images/dark_scales.png);
-    background-repeat: repeat;
+    /*background-image: url(../images/dark_scales.png);
+    background-repeat: repeat;*/
+    background-color: #222222;
 }
 .forphone.col-xs-12 {
     margin-bottom: 2%;
 }
 .AcademicsPage,
 .ExperiencePage {
-    background-image: url(../images/school.png);
-    background-repeat: repeat;
+    /*background-image: url(../images/school.png);
+    background-repeat: repeat;*/
+    background-color: #fcf8e3;
 }
 #underconstruction {
     color: white;
@@ -131,10 +170,34 @@ footer {
 /*Academics*/
 
 @media (min-width: 768px) {
+    #collegePic{
+        background-image: url(../images/mainbuildingclear.jpg);
+        height: 9em;
+        width:22%;
+        display: inline-block;
+        background-repeat: no-repeat;
+        background-position: right;
+        background-size: contain;
+    }
+
+    #schoolPic{
+        background-image: url(../images/schoolbuilding.jpg);
+        height: 9em;
+        width:22%;
+        display: inline-block;
+        background-repeat: no-repeat;
+        background-position: left;
+        background-size: contain;
+    }
+    .description{
+        width:75%;
+        display:inline-block;
+    }
     .parallax1 {
         /* The image used */
         
-        background-image: url('../images/mainbuildingclear.png');
+        background-image: url('../images/mainbuildingsoft.jpg');
+        
         /* Full height */
         
         height: 200px;
@@ -144,11 +207,13 @@ footer {
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
+        background-size: cover;
     }
     .parallax2 {
         /* The image used */
         
-        background-image: url('../images/schoolbuilding.png');
+        background-image: url('../images/schoolbuildingsoft.jpg');
+        
         /* Full height */
         
         height: 200px;
@@ -158,59 +223,77 @@ footer {
         background-attachment: fixed;
         background-position: center;
         background-repeat: no-repeat;
+        background-size: cover;
     }
 }
 @media (max-width: 767px) {
     .parallax1 {
         /* The image used */
         
-        background-image: url('../images/mainbuildingclear.png');
+        background-image: url('../images/mainbuildingclear-001.jpg');
         /* Full height */
         
         height: 200px;
         width: 100%;
         background-position: center;
         background-repeat: no-repeat;
+        background-size: cover;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
     .parallax2 {
         /* The image used */
         
-        background-image: url('../images/schoolbuilding.png');
+        background-image: url('../images/schoolbuilding-004.jpg');
         /* Full height */
         
-        height: 200px;
-        background-size: 100%;
+        height: 250px;
+        width: 100%;
+        background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+}
+@media screen and (min-width: 900px){
+    #collegePic{
+        width: 30%;
+    }
+    #schoolPic{
+        width: 30%;
+    }
+    .description{
+        width:68%;
+    }
+}
+@media screen and (min-width: 1100px){
+    #collegePic{
+        width: 35%;
+    }
+    #schoolPic{
+        width: 35%;
+    }
+    .description{
+        width:60%;
     }
 }
 .hideDiv {
     display: none;
 }
+#collegeInfo{
+    padding: 12em 1em;
+    } 
+#schoolInfo{
+    padding: 12em 1em;
+}
+
 #collegeInfo p,
 #schoolInfo p {
     margin: 0 0 0 0;
-}
-#collegeInfo p:nth-child(3) {
-    color: #2d6079;
-}
-#collegeInfo p:nth-child(2) {
-    color: #0b3d56;
-}
-#collegeInfo p:nth-child(1) {
-    color: #022237;
-}
-#schoolInfo p:nth-child(1) {
-    color: #2d6079;
-}
-#schoolInfo p:nth-child(2) {
-    color: #0b3d56;
-}
-#schoolInfo p:nth-child(3) {
-    color: #022237;
-}
-#schoolInfo p:nth-child(4) {
-    color: #01151f;
+    font-size: 1.2em;
+    font-weight: bold;
+    color: white;
+    text-shadow: 1px 1px 2px #000, 0 0 25px #e4d1c9, 0 0 5px #333;
+    /*mix-blend-mode: difference;*/
 }
 #InterestsPage p.description {
     color: #2f6375;
@@ -219,9 +302,10 @@ footer {
 #nav_up,
 #nav_down {
     color: #f3eddd;
-    background-color: #e2c794;
-    border-color: #815808;
+    background-color: rgba(0,0,0,.075);
+    
 }
+/********************************************************/
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
     width: 50%;
@@ -242,39 +326,31 @@ footer {
 
 #prev_btn,
 #next_btn {
-    color: #555;
+    color: #1c82da;
     opacity: 0.5;
     font-size: 20px;
     padding: 5px 10px;
     display: inline-block;
+    margin-top: 1em;
+    border:none;
+    text-shadow: 0 1px 2px rgba(0,0,0,.6);
 }
 #prev_btn:hover,
 #next_btn:hover {
     opacity: 1;
-    background: -webkit-linear-gradient( #bb851f, #d4b782, #d09831);
-    /* For Safari 5.1 to 6.0 */
-    
-    background: -o-linear-gradient(#bb851f, #d4b782, #d09831);
-    /* For Opera 11.1 to 12.0 */
-    
-    background: -moz-linear-gradient(#bb851f, #d4b782, #d09831);
-    /* For Firefox 3.6 to 15 */
-    
-    background: linear-gradient(#bb851f, #d4b782, #d09831);
-    /* Standard syntax (must be last) */
 }
 #experienceBox {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background: -webkit-linear-gradient( #d8c299, #e9ddc6, #d2b277);
+    background: -webkit-linear-gradient(#68c9c3, rgb(210, 231, 244), #389554);
     /* For Safari 5.1 to 6.0 */
     
-    background: -o-linear-gradient(#d8c299, #e9ddc6, #d2b277);
+    background: -o-linear-gradient(#68c9c3, rgb(210, 231, 244), #389554);
     /* For Opera 11.1 to 12.0 */
     
-    background: -moz-linear-gradient(#d8c299, #e9ddc6, #d2b277);
+    background: -moz-linear-gradient(#68c9c3, rgb(210, 231, 244), #389554);
     /* For Firefox 3.6 to 15 */
     
-    background: linear-gradient(#d8c299, #e9ddc6, #d2b277);
+    background: linear-gradient(#68c9c3, rgb(210, 231, 244), #389554);
     /* Standard syntax (must be last) */
     
     margin: 0 auto;
@@ -291,11 +367,12 @@ footer {
 #experienceBox h3 {
     font-size: 2em;
     line-height: 0.9em;
-    color: #6b2919;
+    color: #052727;
     padding: 1em 0;
+    text-shadow: 1px 1px 8px #2ac460;
 }
 #experienceBox h4 {
-    color: #973C26;
+    color: #690613;
     font-weight: bold;
     margin-bottom: 5px;
     line-height: 1.2em;
@@ -308,7 +385,8 @@ footer {
     width: 100px;
 }
 #experienceBox p {
-    color: #1E3A40;
+    color: #102a3e;
     font-size: 1em;
     padding-bottom: 1em;
+    font-weight: bold;
 }
